src/test/ui/traits/trait-object-macro-matcher.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-macro-matcher.rs:11:8
   |
LL |     m!(dyn 'static +);
   |        ^^^^^^^^^^^^^

error[E0038]: the trait `std::marker::Copy` cannot be made into an object
  --> $DIR/trait-object-macro-matcher.rs:8:8
   |
LL |     m!(dyn Copy + Send + 'static);
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
